--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -9,7 +9,11 @@ image::how-it-works.drawio.svg[A diagram showing how the workflow works]
 
 My projects:
 
-- xref:shell-tester:api:shell-tester.adoc[shell-tester]
+- xref:shell-tester:api:shell-tester.adoc[*shell-tester*] — An automated test tool for shell setups.
+
+Demo:
+
+- https://dtinth.github.io/api-documenter-yaml-to-antora-asciidoc/vue3-apidocs-example/index.html[Example documentation site generated from Vue 3’s codebase]
 
 == Screenshots
 
@@ -22,45 +26,43 @@ image::https://github.com/dtinth/api-documenter-yaml-to-antora-asciidoc/raw/mast
 [#pipeline]
 == The documentation pipeline
 
-. **TypeScript Compiler** is used to generate `.d.ts` files.
-  * TypeScript source code should contain the https://api-extractor.com/pages/tsdoc/doc_comment_syntax/[TSDoc comments].
-. https://api-extractor.com/[*@microsoft/api-extractor*] is used to generate `.api.json` files.
-  * It is maintained by Microsoft and used in many projects.
-  * It https://api-extractor.com/pages/setup/generating_docs/[generates a “doc model” file].
-  ** It describes the API surface of a TypeScript package.
-  ** Its https://www.npmjs.com/package/@microsoft/api-extractor-model[file format] is https://rushstack.io/pages/api/api-extractor-model/[defined by the api-extractor tool].
-  ** It does not specify how the documentation should be organized. i.e. it has no notion of pages and sections.
-. https://www.npmjs.com/package/@microsoft/api-documenter[*@microsoft/api-documenter*] is used to generate `.yml` files.
-  * It is also maintained by Microsoft.
-  * It https://api-extractor.com/pages/commands/api-documenter_yaml/[generates YAML files] conforming to the “universal reference YAML format.”
-  ** This format is mainly used by https://docs.microsoft.com/[docs.microsoft.com] pipeline.
-  ** It can also be https://api-extractor.com/pages/setup/generating_docs/#using-api-documenter-with-docfx[used] with the https://dotnet.github.io/docfx/[DocFX] tool.
-  ** It https://dotnet.github.io/docfx/spec/metadata_format_spec.html[specifies] the structure of the documentation — each metadata file would correspond to a page in the generated documentation.
-. **api-documenter-yaml-to-antora-asciidoc** (this project!) is used to generate `.adoc` files.
-  * It reads the YAML files in step 3 and generates a bunch of `.adoc` files.
-  ** It follows https://docs.antora.org/antora/2.3/[Antora]’s folder and file structures, so that it can be easily used with Antora.
-. https://antora.org/[*Antora*] is used to generate `.html` files.
-  * It is a multi-repository documentation generator. It can be used to generate a single documentation site for multiple projects.
+[cols="1,4,7a"]
+|===
+|Step |Tool |Description
 
-== Usage
+>|1
+|**TypeScript Compiler**
+|Generates TypeScript declaration (.d.ts) files.
 
-Assuming that you have already https://api-extractor.com/pages/setup/generating_docs/[generated] the YAML files using https://api-extractor.com/pages/commands/api-documenter_yaml/[`api-documenter yaml`] command, run the following command to generate the AsciiDoc files
+* TypeScript source code should contain the https://api-extractor.com/pages/tsdoc/doc_comment_syntax/[TSDoc comments].
 
- $ npx api-documenter-yaml-to-antora-asciidoc asciidoc -i <input-dir>
+>|2
+|https://api-extractor.com/[*@microsoft/api-extractor*]
+|Generates https://api-extractor.com/pages/setup/generating_docs/[“doc model”] (.api.json) files.
 
-…where `<input-dir>` is the directory that contains the `.yml` files.
+* It describes the API surface of a TypeScript package.
+* Its https://www.npmjs.com/package/@microsoft/api-extractor-model[file format] is https://rushstack.io/pages/api/api-extractor-model/[defined by the api-extractor tool].
+* It does not specify how the documentation should be organized. i.e. it has no notion of pages and sections.
+* Maintained by Microsoft as part of the https://rushstack.io/[Rush Stack].
 
-This will generate the AsciiDoc pages in `docs/modules/api/pages`.
+>|3
+|https://www.npmjs.com/package/@microsoft/api-documenter[*@microsoft/api-documenter*]
+|Generates SDP YAML (.yml) files.
 
-=== Navigation
+* SDP stands for https://github.com/microsoft/rushstack/pull/2382#issuecomment-741327478[Schema-driven Document Processor], a documentation YAML format for use in Microsoft’s documentation pipeline.
+* It can also be https://api-extractor.com/pages/setup/generating_docs/#using-api-documenter-with-docfx[used] with the https://github.com/microsoft/rushstack/pull/2382#issuecomment-741327478[DocFX v3].
+* Unfortunately not much documentation is available for this format, but there is a https://github.com/microsoft/rushstack/blob/%40microsoft/api-documenter_v7.13.44/apps/api-documenter/src/yaml/ISDPYamlFile.ts[TypeScript definition file] and the examples are easy to parse.
+* It https://dotnet.github.io/docfx/spec/metadata_format_spec.html[specifies] the structure of the documentation — each metadata file would correspond to a page in the generated documentation.
 
-It will also generate a https://docs.antora.org/antora/2.3/navigation/files-and-lists/[navigation file] at `docs/modules/api/nav.adoc` file that lists the pages in the documentation.
+>|4
+|**api-documenter-yaml-to-antora-asciidoc** (this project!)
+|Generates AsciiDoc (.adoc) files.
 
-You can then add this navigation file to your Antora project:
+* It follows https://docs.antora.org/antora/2.3/[Antora]’s folder and file structures, so that it can be easily used with Antora.
 
-[source,yaml]
-----
-nav:
-  - modules/api/nav.adoc <1>
-----
-<1> Add this line
+>|5
+|https://antora.org/[*Antora*]
+|Generates a documentation site.
+
+* It is a multi-repository documentation generator — it can be used to generate a single documentation site for multiple projects.
+|===
