--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,3 +1,4 @@
 * xref:index.adoc[About]
 * xref:usage.adoc[]
+* xref:constraints.adoc[]
 * https://github.com/dtinth/api-documenter-yaml-to-antora-asciidoc[Source code on GitHub]
